--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -10,4 +10,6 @@
 @import url('../blocks/popup/popup.css');
 @import url('../blocks/popup/_is-animated/popup_is-animated.css');
 @import url('../blocks/popup/_is-opened/popup_is-opened.css');
-
+@import url('../blocks/popup/input-error/form__input_type_error.css');
+@import url('../blocks/popup/input-error/form__input-error_active.css');
+@import url('../blocks/popup/__button/button_inactive.css');
