--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
 .profile__edit-button{align-self:center;background:transparent url(images/edit-icon.6c7bf05444b9793fdf6e.svg) 50% no-repeat;background-size:10px 10px;border:1px solid #fff;cursor:pointer;grid-area:button;height:24px;margin:0;padding:0;transition:.3s;width:24px}.profile__edit-button:hover{opacity:.6}@media screen and (max-width:480px){.profile__edit-button{background-size:8px 8px;height:18px;width:18px}}
 .profile__info{display:grid;grid-template-areas:"title button" "description description";grid-template-columns:minmax(auto,295px) auto;grid-gap:9px 17px}@media screen and (max-width:740px){.profile__info{grid-template-columns:minmax(auto,228px) auto;grid-gap:9px 5px}}@media screen and (max-width:568px){.profile__info{grid-template-columns:minmax(auto,195px) auto}}@media screen and (max-width:480px){.profile__info{display:flex;flex-wrap:wrap;justify-content:center;margin:26px 0 33px;width:100%}}
 .profile__title{font-size:42px;font-weight:500;grid-area:title;line-height:48px;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:740px){.profile__title{font-size:32px;line-height:38px}}@media screen and (max-width:568px){.profile__title{font-size:27px;line-height:33px}}@media screen and (max-width:480px){.profile__title{min-width:201px}}
-.profile__image{background-position:50%;background-size:cover;border-radius:50%;height:120px;margin:0 29px 0 0;width:120px}@media screen and (max-width:740px){.profile__image{margin:0 10px 0 0}}@media screen and (max-width:480px){.profile__image{margin-right:0}}
+.profile__image-container{height:120px;margin-inline-end:30px;position:relative;width:120px}.profile__image{background-position:50%;background-size:cover;border-radius:50%;height:120px;margin:0 29px 0 0;width:120px}.profile__image:hover{cursor:pointer;filter:brightness(20%)}.profile__image:hover+.profile__image-edit{display:block}.profile__image-edit{background:transparent 50% no-repeat;display:none;height:26px;left:47px;pointer-events:none;position:absolute;top:47px;width:26px}@media screen and (max-width:740px){.profile__image{margin:0 10px 0 0}}@media screen and (max-width:480px){.profile__image{margin-right:0}}
 .profile{align-items:center;color:#fff;display:flex;font-family:Inter,Arial,sans-serif;padding:36px 0}@media screen and (max-width:480px){.profile{flex-direction:column;padding:43px 0;text-align:center}}
 .places__list{display:grid;grid-template-columns:repeat(auto-fit,282px);justify-content:center;grid-gap:20px 18px;list-style-type:none;margin:0;padding:0}
 
@@ -24,6 +24,8 @@
 .card__like-button_is-active{background:transparent url(images/like-active.a7ffe37dcb927ba0c46c.svg) no-repeat}
 .card__delete-button{background:transparent url(images/delete-icon.2af49b82d305a6ea3442.svg) 50% no-repeat;background-size:18px 18px;border:none;cursor:pointer;height:18px;margin:0;padding:0;position:absolute;right:15px;top:18px;transition:.3s;width:18px}.card__delete-button:hover{opacity:.6}
 .card__title{font-size:24px;line-height:29px;margin:0;max-width:220px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.card__like{align-items:center;display:flex;flex-direction:column;gap:5px}
+.card__like-counter{font-size:13px;font-weight:400;margin:0}
 .card{border-radius:10px;font-family:Inter,Arial,sans-serif;overflow:hidden;position:relative}
 .popup__content{background-color:#fff;border-radius:10px;box-sizing:border-box;max-width:430px;min-height:330px;padding:34px 36px;position:relative;width:100%}@media screen and (max-width:568px){.popup__content{margin-top:40px;max-width:calc(100% - 80px);padding:30px 20px;width:100%}}
 .popup__content_content_image{background:transparent;background-size:cover;border-radius:0;display:flex;height:auto;max-height:75vh;max-width:75vw;padding:0;width:auto}
@@ -35,6 +37,8 @@
 .popup__caption{color:#fff;font-size:12px;left:0;line-height:15px;margin:0;position:absolute;top:calc(100% + 10px)}
 .popup__image{display:block;max-height:100%;max-width:100%;-o-object-fit:cover;object-fit:cover}
 .form__input-error{color:red;display:none;font-size:12px;font-weight:400;line-height:100%}
+.popup_type_confirm .popup__content{min-height:0}
+.popup_type_change-avatar .popup__content{min-height:272px}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;display:none;font-family:Inter,Arial,sans-serif;justify-content:center;left:0;position:fixed;right:0;top:0;z-index:10}
 .popup_is-animated{display:flex;opacity:0;pointer-events:none;transition:visibility 0s .6s,opacity .6s;-webkit-user-select:none;-moz-user-select:none;user-select:none;visibility:hidden}
 .popup_is-opened{display:flex;opacity:1;pointer-events:all;transition:visibility 0s,opacity .6s;visibility:visible}
