--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,3 +1,10 @@
+.profile__image-container {
+  width: 120px;
+  height: 120px;
+  position: relative;
+  margin-inline-end: 30px;
+}
+
 .profile__image {
   width: 120px;
   height: 120px;
@@ -7,6 +14,26 @@
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+}
+
+.profile__image:hover {
+  cursor: pointer;
+  filter: brightness(20%);
+}
+
+.profile__image:hover + .profile__image-edit {
+  display: block;
+}
+
+.profile__image-edit {
+  top: 47px;
+  left: 47px;
+  display: none;
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  background: transparent center no-repeat;
+  pointer-events: none;
 }
 
 @media screen and (max-width: 740px) {
