--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -8,6 +8,8 @@
 @import url('./__caption/popup__caption.css');
 @import url('./__image/popup__image.css');
 @import url('./input-error/form__input-error.css');
+@import url('./__popup_user/popup_type_confirm.css');
+@import url('./__popup_user/popup_type_change-avatar.css');
 
 .popup {
   font-family: 'Inter', Arial, sans-serif;
